# sharma_embedding

./: .gitignore  1.py  LICENSE  README.md  pyproject.toml
sharma_embedding/: __init__.py  embedding.py
